Version 3.1 (16 November 2016)
==============================
- Fix bug with keyboard enter button
<br />
Version 3 (15 November 2016)
============================
- Can add simple items to a list (no persistence)
<br />
Version 2 (13 November 2016)
============================
- What's New Dialog
- End to end UI Integration Tests
- Automatic promotion to Play Store
<br />
Version 1 (16 October 2016)
===========================
- Hello World app and build