@@ -2,10 +2,11 @@ package co.swrl.swrllist;
 
 import java.util.List;
 
-public interface CollectionManager {
+interface CollectionManager {
     List<Swrl> getSwrls();
     List<Swrl> getDeletedSwrls();
     void saveSwrl(Swrl swrl);
-    void deleteSwrl(Swrl swrl);
+    void markAsDeleted(Swrl swrl);
     void recoverDeletedSwrl(Swrl swrl);
+    void permanentlyDeleteAll();
 }
