@@ -5,7 +5,9 @@
     <string name="pkey_version_number">version_number</string>
     <string name="whatsNewLatest">
         <![CDATA[
-        <h4>Version 3.1 (16 November 2016)</h4>
+        <h4>Version 4 (20 November 2016)</h4>
+        \u2022 List items are persisted after restart
+        <h4>Version 3.1 (16 November 2016)
         \u2022 Fix bug with keyboard enter button
         <h4>Version 3 (15 November 2016)</h4>
         \u2022 Can add simple items to a list (no persistence)
